--- a/main.html
+++ b/main.html
@@ -1,10 +1,8 @@
-</head>
-
 <body>
   <div class="page">
-    <h1></h1>
+    <h1>What Is Your Happiness Level?</h1>
     <div class="title-desc">
-      <h2 class="title-desc"></h3>
+      <h2 class="title-desc">Global happiness is a measure of the overall life satisfaction and well-being of the inhabitants of a country or region. With internationalisation and technological advances, people are increasingly concerned not only with economic growth, but also with the quality of life and happiness. Global happiness is not only about a country's economic development, but is also closely related to the cultural, political and social environment.</h3>
     </div>
 
     <hr class="sep">
@@ -157,7 +155,7 @@
 
 
     <div class="heatmap-title">
-      <h2>Percentage of fatal accident with drinking drivers, by day and time of occurrence in the U.S., 2010</h2>
+      <h2>Percentage of fatal accident with drinking drivers, by day and time of occurrence in the U.S., 1998</h2>
       <hr>
       
     </div>
@@ -203,3 +201,8 @@
     <!-- end section 4 -->
 
 </div>
+
+
+         
+
+
